--- a/Simple_CSharp_Games/Pages/ManticorePage.razor.css
+++ b/Simple_CSharp_Games/Pages/ManticorePage.razor.css
@@ -6,7 +6,7 @@
     color: white;
     padding-left: 0 !important;
     padding-right: 0 !important;
-    padding-top: 3rem;
+    padding: 3rem 1rem;
 }
 
 
