--- a/Simple_CSharp_Games/Pages/TicTacToePage.razor
+++ b/Simple_CSharp_Games/Pages/TicTacToePage.razor
@@ -2,23 +2,53 @@
 
 @using Simple_CSharp_Games.Games
 
-<h1>@GameTitle</h1>
+@layout GameLayout
 
-<p>	@GameDescription1 </p>
-<p>	@GameDescription2 </p>
-<p>	@GameDescription3 </p>
+<PageTitle>@GameTitle</PageTitle>
 
-@* implement TicTacToeGame component here *@
-<TicTacToe />
+<div class="tictactoe-page-container">
+
+	@if (!showGame)
+	{
+		<div class="tictactoe-intro">
+			<div class="tictactoe-page-content">
+				<img 
+				class="tictactoe-page-image" 
+				src="/images/tictactoe/tictactoe_intro.png" 
+				alt="Tic Tac Toe Intro" />
+				<div class="tictactoe-page-text">
+					<p>@GameDescription1</p>
+					<p>@GameDescription2</p>
+					<p>@GameDescription3</p>
+					<button class="btn btn-primary" @onclick="ShowGame">Play Tic Tac Toe</button>
+				</div>
+			</div>
+		</div>
+	}
+	@if (showGame)
+	{
+		@* implement TicTacToeGame component here *@
+		<TicTacToe />
+	}
+
+</div>
+
 
 @code {
 
-	private string GameTitle = "Tic Tac Toe";
+	private bool showGame = false;
 
 	// Game description or instructions for Tic Tac Toe here
+	private string GameTitle = "Tic Tac Toe";
 	private string GameDescription1 = "Tic Tac Toe is a classic two-player game where players take turns marking open squares on a 3x3 grid.";
 	private string GameDescription2 = "Player 1 will be 'X' and player 2 will be 'O' when making their marks for their turn.";
 	private string GameDescription3 = "The first player to get three of their marks in a row, column, or diagonal wins the game.";
+
+
+	private void ShowGame()
+	{
+		showGame = true;
+	}
 
 
 }
