--- a/Simple_CSharp_Games/Pages/ExpetisPage.razor.css
+++ b/Simple_CSharp_Games/Pages/ExpetisPage.razor.css
@@ -16,7 +16,7 @@
 }
 
 .expetis-hero-content {
-    width: fit-content;
+    max-width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@
 
 .expetis-hero-text {
     text-align: center;
-    width: fit-content;
+    max-width: fit-content;
     margin-bottom: 1rem;
 }
 
