--- a/Simple_CSharp_Games/Pages/TicTacToePage.razor.css
+++ b/Simple_CSharp_Games/Pages/TicTacToePage.razor.css
@@ -22,18 +22,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.tictactoe-page-image {
-    height: 75vh;
-    width: auto;
-    align-self: center;
+    width: fit-content;
 }
 
 .tictactoe-page-text {
     text-align: center;
     width: fit-content;
     margin-bottom: 1rem;
+}
+
+.tictactoe-page-image {
+    height: 75vh;
+    width: auto;
+    align-self: center;
 }
 
 .tictactoe-page-text p {
