--- a/Simple_CSharp_Games/Games/ManticoreGame.razor.css
+++ b/Simple_CSharp_Games/Games/ManticoreGame.razor.css
@@ -43,13 +43,44 @@
 
 .status-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
     width: 100%;
     padding: 0.5rem 1rem;
     font-weight: bold;
     font-size: 1rem;
-
 }
+
+#cannonInput {
+    width: 20%;
+}
+
+.cannonInput-section {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    gap: 1em;
+}
+
+.shots-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.shot-entry {
+    font-size: 0.9rem;
+    background-color: #333;
+    color: #eaeaea;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+}
+
+
 .load-cannon-section {
     display: flex;
     align-items: center;
@@ -65,9 +96,12 @@
 }
 
 .load-cannon-text {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 1rem;
     text-align: center;
     color: white;
+    gap: 1em;
 }
 
 .load-cannon-image {
