Fountain Of Objects - created structure for new game in Application - new game page - new game nav link - new game component

--- a/Simple_CSharp_Games/Layout/NavMenu.razor
+++ b/Simple_CSharp_Games/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Hunting the Manticore
             </NavLink>
         </div>
+        <div class="nav-item px-3 d-flex align-items-center">
+            <NavLink class="nav-link"
+                     href="fountain">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Fountain of Objects
+            </NavLink>
+        </div>
     </nav>
 </div>
 
