--- a/Simple_CSharp_Games/Pages/ExpetisPage.razor
+++ b/Simple_CSharp_Games/Pages/ExpetisPage.razor
@@ -13,12 +13,14 @@
         <div class="expetis-hero-section">
             <div class="expetis-hero-content">
                 <img class="expetis-hero-image"
-                src="/images/expectis/expetis_intro.png"
-                alt="Expeti's Game Intro" />
+                    src="/images/expectis/expetis_intro.png"
+                    alt="Expeti's Game Intro" 
+                 />
                 <div class="expetis-hero-text">
                     <p>@GameDescription1</p>
                     <p>@GameDescription2</p>
                     <p>@GameDescription3</p>
+                    <p>@GameDescription4</p>
                     <button class="btn btn-primary" @onclick="ShowGame">Play Expeti's Game</button>
                 </div>
             </div>
@@ -35,9 +37,11 @@
 	private string GameTitle = "Expeti's Game";
     private bool showGame = false;
 
-	private string GameDescription1 = "This is a simple two player game where players take turns guessing a random number between 0 and 9.";
-	private string GameDescription2 = "The game will choose the target number and keep track of players guesses, until one player guesses the target number.";
-	private string GameDescription3 = "Players can not make the same guess twice, and the game will continue one player guesses the target correctly.";
+    private string GameDescription1 = "This is a two-player number guessing game.";
+    private string GameDescription2 = "Players alternate turns guessing a number between 0 and 9.";
+    private string GameDescription3 = "Each guess must be unique and cannot be repeated.";
+    private string GameDescription4 = "The first player to correctly guess the target number wins.";
+
 
         private void ShowGame()
     {
