--- a/Simple_CSharp_Games/Pages/ExpetisPage.razor.css
+++ b/Simple_CSharp_Games/Pages/ExpetisPage.razor.css
@@ -1,6 +1,8 @@
 ﻿.expetis-page-container {
     background-color: #1a1a2e;
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
     color: white;
     padding-left: 0 !important;
     padding-right: 0 !important;
@@ -16,7 +18,8 @@
 }
 
 .expetis-hero-content {
-    max-width: fit-content;
+    width: fit-content;
+    background-color: dimgrey;
     display: flex;
     flex-direction: column;
     align-items: center;
