The Final Battle - implemented game structure including hero image, intro page, nav tab, and home page thumbnail

--- a/Simple_CSharp_Games/Games/FountainGame.razor
+++ b/Simple_CSharp_Games/Games/FountainGame.razor
@@ -1,8 +1,8 @@
 ﻿
 <div class="fountain-game-container">
-	<h3>FountainGame</h3>
+	<h3>@GameTitle</h3>
 </div>
 
 @code {
-
+	private string GameTitle = "The Fountain of Objects";
 }
