--- a/Simple_CSharp_Games/Pages/Home.razor
+++ b/Simple_CSharp_Games/Pages/Home.razor
@@ -19,6 +19,7 @@
         <img src="/images/tictactoe/tictactoe_intro.png" alt="Tic Tac Toe Intro" @onclick="() => NavigateToPage(ticPage)" />
         <img src="/images/manticore/hero_image.png" alt="Hunting the Manticore Intro" @onclick="() => NavigateToPage(manticorePage)" />
         <img src="/images/fountain/fountain_hero.png" alt="The Fountain Of Objects Intro Image" @onclick="() => NavigateToPage(fountainPage)" />
+        <img src="/images/battle/battle_hero.png" alt="The Final Battle Intro Image" @onclick="() => NavigateToPage(battlePage)" />
     </div>
 </div>
 
@@ -33,6 +34,7 @@
     private string expectPage = "expetispage";
     private string manticorePage = "manticore";
     private string fountainPage = "fountain";
+	private string battlePage = "finalbattle";
 
     private void NavigateToPage(string page)
     {
