--- a/Simple_CSharp_Games/Layout/NavMenu.razor
+++ b/Simple_CSharp_Games/Layout/NavMenu.razor
@@ -34,7 +34,13 @@
         <div class="nav-item px-3 d-flex align-items-center">
             <NavLink class="nav-link"
                      href="fountain">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Fountain of Objects
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>The Fountain of Objects
+            </NavLink>
+        </div>
+        <div class="nav-item px-3 d-flex align-items-center">
+            <NavLink class="nav-link"
+                     href="finalbattle">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>The Final Battle
             </NavLink>
         </div>
     </nav>
